# Teaching_Assistant

./: .env.backend  .env.example  .env.unified  .gitignore  CODE_OF_CONDUCT.md  CONFIG_GUIDE.md  CONTRIBUTING.md  Dockerfile.backend  LICENSE  Makefile  README.md  SOURCE_PRESERVATION_SUMMARY.md  aaa.py  config.yaml  debug_typesense.py  docker-compose.separate.yml  final_search_comparison.py  main.py  manage_separate.sh  nginx.conf  performance_comparison.py  pyproject.toml  pytest.ini  raw_data_analysis.md  run_fullstack.sh  run_tests.py  search_performance_results.json  setup.sh  start_backend.sh  start_frontend.sh  start_server.sh  start_typesense.sh  test_api_endpoint.py  test_api_fix.py  test_classification_fix.py  test_discourse_cleaning.py  test_discourse_optimization_comparison.py  test_multimodal_data.json  test_multimodal_integration.py  test_raw_data.py  (+6 more)
api/: README.md  main.py  main_api_only.py  process.py  static_optimization.py  test_optimizations.py
data/: createchunks.sh  discourse_chunks.json  discourse_scrape.py  optimized_chunker.py  optimized_rag_pipeline.py  organise_mds.sh  run_rag_pipeline.py  search_examples.py
docker/: Dockerfile.frontend  docker-compose.separate.yml
docs/: CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CONFIG_GUIDE.md  DEPLOYMENT_COMPARISON.md  DEVELOPMENT_GUIDE.md  FRONTEND_BACKEND_VERIFICATION.md  LINK_ENHANCEMENT_FIX_COMPLETE.md  MODEL_PARAMETER_INTEGRATION_COMPLETE.md  MODULARIZATION_SUMMARY.md  SEPARATE_DEPLOYMENT.md  UNIFIED_SEARCH_INTEGRATION.md
embed/: discourse_embed.py  embed.py  gitcontent_embed.py  newtest.py
frontend/: .env.production  README.md  package-lock.json  package.json
junk/: enhanced_config.py  enhanced_search_service.py  example_integrated_chunking.py
kubernetes/: README.md  backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  secrets.yaml
lib/: __init__.py  config.py  embeddings.py
scripts/: check_collections.py  check_embedding_dimensions.py  debug_typesense_connection.py  local_deploy.sh  manage_separate.sh  optimize_structure.sh  simple_collection_checker.py  start_backend.sh  start_frontend.sh  start_server.sh  start_typesense.sh  test_api_endpoints.py  test_comprehensive_search_quality.py  test_ollama_embedding.py  test_semantic_search.py  test_semantic_search_flow.py  test_semantic_search_multi.py  typesense_client.py  verify_config.py  verify_deployment.sh
tests/: README.md  __init__.py  conftest.py  test_data_pipeline.py  (+1 more)
(+99 files in other folders)
