[project]
name = "teaching-assistant"
version = "0.1.0"
description = "use ai be fast"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "python-dotenv",
    "crawl4ai",
    "playwright",
    "asyncio",
    "html2text>=2025.4.15",
    "tiktoken>=0.9.0",
    "typesense>=1.1.1",
]
